--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -61,7 +61,7 @@ html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address
 img.main-logo {
 	position: absolute;
 	top: -8px;
-	left: 79px;
+	left: 131px;
 }
 #cat-text {
 	position: absolute;
@@ -119,6 +119,7 @@ img.main-logo {
 	padding-top: 10px;
 	padding-bottom: 10px;
 	padding-left: 20px;
+	min-height: 303px;
 	img {
 		float: left;
 		margin-right: 20px;
@@ -205,6 +206,7 @@ img.main-logo {
 	position: relative;
 	left: 460px;
 	top: 17px;
+	border: 1px solid #CECECE;
 }
 
 #home-top-right {
@@ -636,7 +638,7 @@ to { background-color: #129100; -moz-box-shadow: 0 0 9px #333; }
 	min-height: 368px;
 }
 #backend-container {
-	background: url('/assets/bg_leftside_final.jpg');
+	background: url('/assets/bg_leftside_final3.jpg');
 	background-repeat: no-repeat;
 }
 .cannavideo{
@@ -1740,7 +1742,7 @@ a:hover{
 	background-repeat: repeat-x;
 	background-color: #006012;
 	margin-top: 0em;
-	padding-left: 25%;
+	padding-left: 374px;
 	height: 158px;
 	background-image:url('/images/site/extended_top_bg.png');
 	background-repeat: no-repeat;
@@ -2223,4 +2225,8 @@ li.canna-wisdom {
 	top: 143px;
 	left: 243px;
 	z-index: 99;
+}
+
+.side-ad {
+	border: 1px solid #CECECE;
 }
