--- a/app/views/critiques/_critique_exerpt.html.erb
+++ b/app/views/critiques/_critique_exerpt.html.erb
@@ -1,4 +1,4 @@
-	<div class="span10 critiques-container">
+	<div class="critiques-container">
 		<%= image_tag critique.photo(:large) %>
 		<h3><%= link_to critique.title, critique_path( critique ) %></h3>
 		<p><%= raw HTML_Truncator.truncate( critique.content, 90  ) %></p>
