--- a/app/views/dispensaries/search.html.erb
+++ b/app/views/dispensaries/search.html.erb
@@ -20,7 +20,7 @@
 	</div>
 	<div class="span4">
 		<% @ads.each do |ad| %>
-			<div class="home-add-right"><%= link_to( image_tag( ad.image(:side) ), ad_path(ad) ) %></div>
+			<div class="home-add-right"><%= link_to( image_tag( ad.image(:side), class: "side-ad" ), ad_path(ad) ) %></div>
 		<% end %>
 	</div>
 </div>
