--- a/app/views/layouts/cadets.html.erb
+++ b/app/views/layouts/cadets.html.erb
@@ -27,7 +27,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<%= image_tag "http://placekitten.com/728/90", id: "btobad" %>
+				<%= link_to( image_tag( @btob.image(:btob), id: "btobad" ), @btob.url ) %>
 			</div>
   </div>
 </div>
