--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -640,6 +640,7 @@ to { background-color: #129100; -moz-box-shadow: 0 0 9px #333; }
 #backend-container {
 	background: url('/assets/bg_leftside_final3.jpg');
 	background-repeat: no-repeat;
+	min-height: 425px;
 }
 .cannavideo{
     margin-top:20px;
