--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,8 @@
 <head>
 <link href="/assets/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" />
         <title>CannaPages</title>
-        <%= stylesheet_link_tag    "application", :media => "all" %>
+				<%= favicon_link_tag %> 
+       <%= stylesheet_link_tag    "application", :media => "all" %>
         <%= stylesheet_link_tag    "cadets", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
