--- a/app/views/layouts/cadets.html.erb
+++ b/app/views/layouts/cadets.html.erb
@@ -8,6 +8,7 @@
 <html>
 <head>
 	<title>CannaPages</title>
+	<%= favicon_link_tag %>
 	<%= stylesheet_link_tag  "application", :media => "all" %>
   <%= stylesheet_link_tag  "cadets", :media => "all" %>
   <%= javascript_include_tag "application" %>
