--- a/app/views/layouts/empty.html.erb
+++ b/app/views/layouts/empty.html.erb
@@ -12,6 +12,7 @@
 <head>
 <link href="/assets/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" />
         <title>CannaPages</title>
+				<%= favicon_link_tag %>
         <%= stylesheet_link_tag    "application", :media => "all" %>
         <%= stylesheet_link_tag    "cadets", :media => "all" %>
   <%= javascript_include_tag "application" %>
