--- a/app/views/searches/_dispensaries.html.erb
+++ b/app/views/searches/_dispensaries.html.erb
@@ -3,7 +3,7 @@
 																				id: "main-search-container" do %>
 		<div class="span4">
 			<%= text_field_tag :search_term, "", 
-											 placeholder: "Filter names here or browse by category bellow", 
+											 placeholder: "Search by name here or choose a category below", 
 											 :class => "input-medium search-query med-search", :id => "cannaenginetext-big" %>
 		</div>
 		<div class="spane1">
