--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -2231,3 +2231,31 @@ li.canna-wisdom {
 .side-ad {
 	border: 1px solid #CECECE;
 }
+
+.volume-index-container {
+	border-top: 1px solid #CECECE;
+	margin-top: 9px;
+	padding-top: 12px;
+	.volume-index-header {
+		font-weight: bold;
+		font-size: 14pt;
+		margin-bottom: 2px;
+	}
+	ul {
+		list-style-type: circle;	
+	}
+}
+
+#flash-wrap {
+	position: relative;
+	width: 250px;
+	height: 250px;
+}
+
+#flash-link {
+	position: absolute;
+	width: 250px;
+	height: 250px;
+	left: 40px;
+	z-index: 99;
+}
