--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -45,7 +45,7 @@
 		<tr>
 			<td>Get FREE listing</td>
 			<td><%= backend_link %></td>
-			<td><%= link_to "Sigil Development", "htpp://sigildev.com" %></td>
+			<td><%= link_to "Sigil Development", "http://sigildev.com" %></td>
 			<td></td>
 			<td></td>
 		</tr>
