--- a/app/views/shared/_flash_vid.html.erb
+++ b/app/views/shared/_flash_vid.html.erb
@@ -1,3 +1,5 @@
+<div id="flash-wrap">
+<div id="flash-link" onclick="$('.login-link').click();" style="cursor:pointer;"></div>
 <object data="<%= url %>" type="application/x-shockwave-flash" id="myflash" width="250" height="250">
 <param name="movie" value="myflash.swf" />
 <param name="bgcolor" value="#ffffff" />
@@ -9,3 +11,4 @@
 <param name="allowscriptaccess" value="samedomain" />
 <p>Adobe <a href="http://get.adobe.com/flashplayer/">Flash Player</a> is required to view this content.</p>
 </object>
+</div>
