--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -14,14 +14,14 @@ html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address
 	font-weight: bold;
 	font-size: 8pt;
 	position: relative;
-	top: -18px;
-	left: 59px;
+	top: 43px;
+	left: 75px;
 }
 
 #radius-change {
 	position: relative;
 	top: -8px;
-	left: 64px;
+	left: 159px;
 	position: relative;
 	height: 25px;
 	width: 35px;
@@ -65,10 +65,11 @@ img.main-logo {
 }
 #cat-text {
 	position: absolute;
-	left: 35px;
-  top: 90px;
+	left: 57px;
+  top: 91px;
 	color: white;
 	font-weight: bold;
+	font-size: 10pt;
 }
 
 #search-results-container {
@@ -569,9 +570,15 @@ to { background-color: #129100; -moz-box-shadow: 0 0 9px #333; }
 }
 
 #main-find-btn {
-	left: 55px;
-	top: -4px;
-	position: relative;
+	left: 69px;
+	top: -74px;
+	position: absolute;
+}
+
+.search-icon {
+	position: absolute;
+	right: -3px;
+	top: 27px;
 }
 
 #main2-find-btn {
@@ -592,20 +599,31 @@ to { background-color: #129100; -moz-box-shadow: 0 0 9px #333; }
 	font-weight: 400;
 	position: relative;
 	top: 5px;
+	-webkit-border-radius: 5px;
+	border-radius: 5px;
 }
 #main-search-container {
 	height: 100%;
-	padding-top: 24px;
+	padding-top: 36px;
+  position:	absolute;
 }
 #near-text {
 	color: white;
 	position: relative;
 	top: 15px;
 	font-weight: bold;
-	left: 7px;
+	left: 17px;
 }
 #header-links {
-	padding-top: 14px;
+	position: absolute;
+	top: 150px;
+	left: 600px;
+	top: 105px;
+}
+.main-category-select {
+	position: absolute;
+	top: 104px;
+	left: 389px;
 }
 #search-bottom {
 
@@ -616,6 +634,9 @@ to { background-color: #129100; -moz-box-shadow: 0 0 9px #333; }
 	font-weight: 400;
 	position: relative;
 	top: 5px;
+	-webkit-border-radius: 5px;
+	border-radius: 5px;
+	z-index: 99;
 }
 
 .med-search {
@@ -2024,6 +2045,11 @@ textarea {
 }
 
 #listing-show-top {
+	position: relative;
+}
+#listing-show-top-background {
+	position: absolute;
+	left: 20px;
 	background-image: url('/assets/listing-header-bg.jpg');
 	background-repeat: no-repeat;
 	img.main-image {
@@ -2258,4 +2284,14 @@ li.canna-wisdom {
 	height: 250px;
 	left: 40px;
 	z-index: 99;
+}
+
+.volumes-search {
+	left: 44px;
+}
+
+#behind-arrow {
+	position: absolute;
+	top: 95px;
+	left: 380px;
 }
