--- a/app/views/searches/_volumes.html.erb
+++ b/app/views/searches/_volumes.html.erb
@@ -4,14 +4,14 @@
 		<div class="span7">
 			<%= text_field_tag :search_term, "", 
 											 placeholder: "Name, Author or Body Search", 
-											 :class => "input-medium search-query big-search", :id => "cannaenginetext-big" %>
+											 :class => "input-medium search-query big-search volumes-search", :id => "cannaenginetext-big" %>
 
 			<%= hidden_field_tag :category, "All", id: "send-cat" %>
 		</div>
 		<div class="span1">
-			<button type="submit" class="btn-custom" id="main2-find-btn">
-				<%= image_tag "/images/icons/magglass.png" %>
-			</button>
+			<!-- <button type="submit" class="btn-custom" id="main2-find-btn"> -->
+			<!-- </button> -->
+				<%= image_tag "/images/icons/magglass.png", class: "search-icon canna-link"%>
 		</div>
 	<% end %>
 </div>
