--- a/app/views/shared/_newheader.html.erb
+++ b/app/views/shared/_newheader.html.erb
@@ -19,7 +19,7 @@
 			<div id="cat-container">
 				<% catClass = (params[:controller] == "volumes") ? "hidden" : "" %>
 				<% catClass = "hidden" if params[:controller] == "articles" %>
-				<p id="cat-text" class="<%= catClass %>">Browse <span id="cat-text-value">All Categories</span></p>
+				<p id="cat-text" class="<%= catClass %>">Searching <span id="cat-text-value">All Categories</span></p>
 			</div>
 			<% end %>
 		</div>
