--- a/app/views/dispensaries/show.html.erb
+++ b/app/views/dispensaries/show.html.erb
@@ -1,7 +1,7 @@
 <%= render "icons_for_show", dispensary: @dispensary %>
 
 <div id="single-dispensary" class="row">
-    <div class="row" id="listing-show-top">
+    <div class="row" id="listing-show-top"><div id="listing-show-top-background"></div>
 			<div class="span4">
 				<%= image_tag @dispensary.photo.url(:large), class: "main-image" %>
 			</div>
