--- a/app/views/shared/_fixed_back_end_nav.html.erb
+++ b/app/views/shared/_fixed_back_end_nav.html.erb
@@ -73,8 +73,8 @@
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Ads<b class="caret"></b></a>
           <ul class="dropdown-menu">
-						<li><%= link_to "manage", user_ads_path( current_user ) if current_user.can?("create", "ads") || true %></li>
-						<li><%= link_to "administer", admin_ads_path if current_user.can?("admin_index", "ads") || true %></li>
+						<li><%= link_to "manage", user_ads_path( current_user ) if current_user.can?("create", "ads") %></li>
+						<li><%= link_to "administer", admin_ads_path if current_user.can?("admin_index", "ads") %></li>
           </ul>
         </li>
         <!--
