--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -579,6 +579,7 @@ to { background-color: #129100; -moz-box-shadow: 0 0 9px #333; }
 	position: absolute;
 	right: -3px;
 	top: 27px;
+	z-index: 99;
 }
 
 #main2-find-btn {
@@ -619,6 +620,7 @@ to { background-color: #129100; -moz-box-shadow: 0 0 9px #333; }
 	top: 150px;
 	left: 600px;
 	top: 105px;
+	padding-top: 14px;
 }
 .main-category-select {
 	position: absolute;
