Just a few touch ups

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -626,6 +626,27 @@ to { background-color: #129100; -moz-box-shadow: 0 0 9px #333; }
 	border-radius: 5px;
 	z-index: 99;
 }
+#cannaenginetext-big3 {
+	height: 30px;
+	width: 600px;
+	font-size: 9pt;
+	font-weight: 400;
+	position: relative;
+	top: 5px;
+	-webkit-border-radius: 5px;
+	border-radius: 5px;
+	z-index: 99;
+}
+#cannaenginetext-big2 {
+	height: 30px;
+	font-size: 9pt;
+	font-weight: 400;
+	position: relative;
+	top: 5px;
+	-webkit-border-radius: 5px;
+	border-radius: 5px;
+	z-index: 99;
+}
 
 .med-search {
 	width: 320px;
