--- a/app/views/searches/_volumes.html.erb
+++ b/app/views/searches/_volumes.html.erb
@@ -4,7 +4,7 @@
 		<div class="span7">
 			<%= text_field_tag :search_term, "", 
 											 placeholder: "Name, Author or Body Search", 
-											 :class => "input-medium search-query big-search volumes-search", :id => "cannaenginetext-big" %>
+											 :class => "input-medium search-query big-search volumes-search", :id => "cannaenginetext-big2" %>
 
 			<%= hidden_field_tag :category, "All", id: "send-cat" %>
 		</div>
