--- a/app/views/searches/_critiques.html.erb
+++ b/app/views/searches/_critiques.html.erb
@@ -4,7 +4,7 @@
 		<div class="span7">
 			<%= text_field_tag :search_term, "", 
 											 placeholder: "Keyword search(e.g. indica, kush, dispensary name, etc)", 
-											 :class => "input-medium search-query big-search", :id => "cannaenginetext-big" %>
+											 :class => "input-medium search-query big-search", :id => "cannaenginetext-big3" %>
 
 			<%= hidden_field_tag :category, "All", id: "send-cat" %>
 		</div>
