--- a/app/views/dispensaries/_featured.html.erb
+++ b/app/views/dispensaries/_featured.html.erb
@@ -1,11 +1,11 @@
 <div class="listing-index row featured">
 	<%= link_to( image_tag( dispensary.photo.url(:large), class: "photo" ),  dispensary, class: "listing-index-link") %>
 	<div class="info-left">
-		<%= image_tag "/images/icons/reglistingbug.png" %>
+		<%= image_tag "/images/icons/reglistingbug.png", class: "featured-top-icon" %>
 		<% name = ( dispensary.name.size > 19 ) ? dispensary.name[0..18] + "..." : dispensary.name %>
 		<h5><%= link_to ("#{name}"), dispensary %></h5>
 		<p>Category: <%= dispensary.business_type %></p>
-		<p><%= dispensary.distance %> miles from <%= params[:last_location] %></p>
+		<p><%= dispensary.distance %> miles from <br /> <%= params[:last_location] %></p>
 		<div class="listing-index-icons">
 			<%= link_to( image_tag( "menuicons-01.png" ), critiques_for_listing_path( dispensary )) unless dispensary.critiques.empty? %>
 		</div>
