--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -302,7 +302,11 @@ img.main-logo {
 
 
 #single-dispensary {
+	background-color: white;
+	background-image: url('/images/site/listing-header-bg.jpg');
+	background-repeat: no-repeat;
 	padding-left: 40px;
+	background-position-y: -16px;
 }
 
 #single-dispensary-inner-left{
@@ -349,7 +353,6 @@ a.modal-link {
 }
 
 #home-content {
-	background-color: white;
 	padding-top: 20px;
 	-webkit-box-shadow: 0px 0px 0px rgba(50, 50, 50, 0);
 	-moz-box-shadow:    0px 0px 0px rgba(50, 50, 50, 0);
@@ -1590,10 +1593,10 @@ a:hover{
 }
 
 #cannacarouseltop{
-	height:240px;
-	margin-left: 20px;
   -moz-box-shadow:0 3px 10px #888;
 	-webkit-box-shadow:0 3px 10px #888;
+	position: relative;
+	left: -32px;
 }
 
 .listtitle{
@@ -1996,6 +1999,7 @@ a:hover{
 	border-bottom: 1px solid #A8A8A8;
 	padding-bottom: 10px;
 	padding-top: 10px;
+	font-size: 14pt;
 	word-wrap: break-word;
 	p {
 		font-size: .7em;
@@ -2055,18 +2059,22 @@ textarea {
 
 #listing-show-top {
 	position: relative;
+	h3 {
+		font-size: 12pt
+	}
 }
 #listing-show-top-background {
 	position: absolute;
 	left: 20px;
 	background-image: url('/assets/listing-header-bg.jpg');
 	background-repeat: no-repeat;
-	img.main-image {
-		position: relative;
-		left: -20px;
-		top: -11px;
-		border: 2px solid #006012;
-	}
+}
+img.main-image {
+	border: 1px solid #006012;
+	position: relative;
+	left: -20px;
+	top: -12px;
+	border: 2px solid #006012;
 }
 
 .listing-show-basic-info {
@@ -2436,4 +2444,10 @@ width: 35px;
 position: absolute;
 top: 27px;
 left: 631px;
+}
+
+.social-container {
+	position: absolute;
+	top: 192px;
+	left: 561px;
 }
