--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -1597,6 +1597,8 @@ a:hover{
 	-webkit-box-shadow:0 3px 10px #888;
 	position: relative;
 	left: -32px;
+	width: 640px;
+	height: 250px;
 }
 
 .listtitle{
