Done for the  night.............

--- a/app/views/searches/_dispensaries_cat.html.erb
+++ b/app/views/searches/_dispensaries_cat.html.erb
@@ -1,7 +1,7 @@
 
-<%= image_tag( "behind-arrow.png", id: "behind-arrow" ) %>
+<%= image_tag( "/images/behind-arrow.png", id: "behind-arrow" ) %>
 <div class="dropdown main-category-select">
-<%= link_to( image_tag( "arrow-right.png", id: "cat-select" ),
+<%= link_to( image_tag( "/images/arrow-right.png", id: "cat-select" ),
 												"#", class: "dropdown-toggle" ) %>
 	<ul class="dropdown-menu cat-select-menu" role="menu" aria-labelledby="dLabel">
 		<li class="cat-select-btn"><p>All Categories</p></li>
