Search refinment and other

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -2453,3 +2453,11 @@ left: 631px;
 	top: 192px;
 	left: 561px;
 }
+
+.constrained {
+	width: 175px;
+}
+
+.roachy-empty-search {
+	width:108px;	
+}
