--- a/app/views/shared/empty_query.html.erb
+++ b/app/views/shared/empty_query.html.erb
@@ -2,11 +2,11 @@
     <a class="close" data-dismiss="alert" href="#">×</a>
 		<div class="row">
 			<div class="span3">
-				<%= image_tag "/images/site/roachy-small.png" %>
+				<%= image_tag "/images/site/roachy-large.png", class: "roachy-empty-search" %>
 			</div>
 			<div class="span7">
 				<h4 class="alert-heading">Roachy's Notice</h4>
-				<p>Sorry your current search came up blank. We are working to get more and more content and listings. If you just logged in we might not have been able to get your location because of security settings. If that so all you have to do is type in your address hit the search button and see listings in your area. In the mean time please try broader search terms. Have a wonderfull day! In the mean time I found you an exclusive editorial to read. In the mean time please try broader search terms. Have a wonderfull day!</p>
+				<p>Sorry your current search came up blank. We are working to get more and more content and listings. If you are hear for the first time or started a new browser recently we might not have been able derive your relative location do to various technical reasons. If you want to have distance functionality all you have to do is type in your address in the near field hit the search button and see listings in your area. Oh and I have an exclusive editorial for you too... if you wana read it that is. Have a wonderfull day!</p>
 			</div>
 		</div>
   </div>
