--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,12 +8,11 @@
 <!--[if lt IE 9]>
 <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
-<html xmlns:fb="http://ogp.me/ns/fb#">
+<html>
 <head>
 <link href="/assets/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" />
         <title>CannaPages</title>
-				<%= favicon_link_tag %> 
-       <%= stylesheet_link_tag    "application", :media => "all" %>
+        <%= stylesheet_link_tag    "application", :media => "all" %>
         <%= stylesheet_link_tag    "cadets", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
@@ -21,29 +20,38 @@
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 </head>
-<body>
-	<div id="body1">
-	<div class="container-fluid">
-			<%= render "shared/newheader" %>
-		<div id="inner-container">
-			<div id="content">
-				<div class="row" id="home-content">
-					<%= render "shared/flash", flash: flash %>
-					<%= yield %>
-				</div>
-			</div>
-		</div>
-					<%= render "shared/footer" %>
-	</div>
-			
+  <body>
+    <div class="container">
+      <div id="inner-container">
+          <%= render "shared/header" %>
+          <div id="content">
+            <%= render "shared/flash", flash: flash %>
+          <div class="row" id="home-content">
+            <%= yield %>
+            <%= render "shared/footer" %>
+          </div>
+          </div>
+      </div>
+    </div>
+    
   <!-- modals -->
   <%= render "modals/login" %>
   <%= render "modals/create_user" %>
-  <%= render "modals/create_user_listing" %>
-  <%= render "modals/create_user_ad" %>
   <%= render "modals/cadets_helper" %>
   <%= render "modals/strain_wiki_placeholder" %>
   <%= render "modals/cannasaver_placeholder" %>  
-	</div>
   </body>
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-35836576-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
 </html>
