--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -57,7 +57,7 @@ img.main-logo {
 }
 #cat-text {
 	position: absolute;
-	left: 57px;
+	left: 339px;
   top: 91px;
 	color: white;
 	font-weight: bold;
@@ -1782,6 +1782,7 @@ a:hover{
 	background-image:url('/images/site/extended_top_bg.png');
 	background-repeat: no-repeat;
 	background-position: center;
+	padding-left: 93px;
 }
 	
 .cannalogo {
