--- a/app/views/shared/_newheader.html.erb
+++ b/app/views/shared/_newheader.html.erb
@@ -16,9 +16,8 @@
 		</div>
 	</div>
 
-  <div class="row" id="searchbar">
+  <div id="searchbar">
 		<div class="searchbar-container">
-  	<div class="span3">
 				<%= link_to( image_tag("top-logo.png", class: "main-logo"), root_path ) %>
 			<% if params[:controller] == "dispensaries" %>
 			<div id="cat-container">
@@ -27,17 +26,11 @@
 				<p id="cat-text" class="<%= catClass %>">Searching <span id="cat-text-value">All Categories</span></p>
 			</div>
 			<% end %>
-		</div>
-		<div class="span9">
 			
 			<%= render @search_partial %>      
 
-			<div class="row" id="search-bottom">
-					<div class="span3">
 						<%= render "searches/#{params[:controller]}_cat" %>
-					</div>
-				<div class="span5" id="header-links">
-
+				<div class="main-links-container">
 					<% if params[:controller] == "dispensaries" %>
 						<%= link_to( image_tag( "/images/icons/engine-top-clicked.png", class: "canna-link-active" ), root_path ) %>
 					<% else %>
@@ -65,9 +58,7 @@
 					
 					<% link_to( image_tag( "/images/icons/wiki-top.png", class: "canna-link" ), "#strain-wiki", "data-toggle"=> :modal ) %>
 					<% link_to( image_tag( "/images/icons/saver-top.png", class: "canna-link" ), "#cannasaver", "data-toggle" => :modal ) %>
-				</div>
 			</div>
 		</div>
 		</div>
 	</div>
-</div>
