--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -69,8 +69,8 @@ img.main-logo {
 }
 
 .dropdown-menu.cat-select-menu {
-	top: 21px;
-	left: 32px;
+	top: 27px;
+	left: 59px;
 	border: 0px;
 	background-color: #129100;
 	p {
@@ -2081,7 +2081,7 @@ img.main-image {
 	position: relative;
 	left: -20px;
 	top: -12px;
-	border: 2px solid #006012;
+	width: 254px;
 }
 
 .listing-show-basic-info {
@@ -2142,6 +2142,7 @@ img.main-image {
 	position: absolute;
 	top: 187px;
 	left: 244px;
+	z-index: 99;
 }
 
 .listing-show-info-box {
@@ -2441,7 +2442,7 @@ background-color: #EFF2F7;
 #radius-change {
 position: absolute;
 top: 3px;
-left: 718px;
+left: 710px;
 height: 25px;
 width: 35px;
 }
@@ -2456,6 +2457,7 @@ left: 631px;
 	position: absolute;
 	top: 192px;
 	left: 561px;
+	z-index: 99;
 }
 
 .constrained {
