--- a/app/views/dispensaries/show.html.erb
+++ b/app/views/dispensaries/show.html.erb
@@ -2,7 +2,7 @@
 
 <div id="single-dispensary" class="row">
     <div class="row" id="listing-show-top"><div id="listing-show-top-background"></div>
-			<div class="span4">
+			<div class="span4 main-image-container">
 				<%= image_tag @dispensary.photo.url(:large), class: "main-image" %>
 			</div>
 			<div class="span4 listing-show-basic-info">
