--- a/app/views/dispensaries/_icons_for_show.html.erb
+++ b/app/views/dispensaries/_icons_for_show.html.erb
@@ -11,7 +11,7 @@
 	<% end %>
 
 <div id="listing-show-icons">
-	<%= link_to( image_tag( "menuicons-01.png" ), critiques_for_listing_path( dispensary )) unless dispensary.critiques.empty? %>
+	<%= link_to( image_tag( "menuicons-01.png", class: "listing-show-icon" ), critiques_for_listing_path( dispensary )) unless dispensary.critiques.empty? %>
 	<% image_tag "menuicons-02.png" %>
 	<% image_tag "menuicons-03.png" %>
 	<% image_tag "menuicons-04.png" %>
