--- a/app/views/dispensaries/search.html.erb
+++ b/app/views/dispensaries/search.html.erb
@@ -26,9 +26,9 @@
 		<% end %>
 	</div>
 	<div class="span4">
-		<% @ads.each do |ad| %>
-			<div class="home-add-right"><%= link_to( image_tag( ad.image(:side), class: "side-ad" ), ad_path(ad) ) %></div>
-		<% end %>
+		<div class="home-add-right"><%= link_to( image_tag( @ads.first.image(:side), class: "side-ad" ), ad_path(@ads.first) ) %></div>
+		<div class="home-add-right"><%= link_to( image_tag( @bigAd.image(:bside), class: "side-ad" ), ad_path(@bigAd) ) %></div>
+		<div class="home-add-right"><%= link_to( image_tag( @ads.last.image(:side), class: "side-ad" ), ad_path(@ads.last) ) %></div>
 	</div>
 </div>
 
