--- a/app/views/dispensaries/search.html.erb
+++ b/app/views/dispensaries/search.html.erb
@@ -27,7 +27,9 @@
 	</div>
 	<div class="span4">
 		<div class="home-add-right"><%= link_to( image_tag( @ads.first.image(:side), class: "side-ad" ), ad_path(@ads.first) ) %></div>
-		<div class="home-add-right"><%= link_to( image_tag( @bigAd.image(:bside), class: "side-ad" ), ad_path(@bigAd) ) %></div>
+		<% if @bigAd %>
+			<div class="home-add-right"><%= link_to( image_tag( @bigAd.image(:bside), class: "side-ad" ), ad_path(@bigAd) ) %></div>
+		<% end %>
 		<div class="home-add-right"><%= link_to( image_tag( @ads.last.image(:side), class: "side-ad" ), ad_path(@ads.last) ) %></div>
 	</div>
 </div>
