Only business resources and contact us togo

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -2487,3 +2487,29 @@ left: 631px;
 	left: 621px;
 	margin: 0 auto;
 }
+
+#featured-side {
+	width: 250px;
+	height: 141px;
+	border: 1px solid #CECECE;
+	position: relative;
+	left: 33px;
+	margin-top: 8px;
+	background-color: #F0E0E1;
+	h3 {
+			text-align: center;
+		a {
+			color: #5E55EC;
+			font-size: 12pt;
+			text-decoration: underline;
+		}
+	}
+	p {
+		margin-bottom: 5px;
+		margin-left: 5px;
+	}
+	p.side-special {
+		color: #FE0100;
+		font-style: bolder;
+	}
+}
