--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -10,7 +10,7 @@
 	<div />
 	<div id="table-wrap">
 		<div class="social-media-links">
-			<%= link_to( image_tag( "fb-icon-footer.png" ), "https://www.facebook.com/cannapages.colorado" ) %>
+			<%= link_to( image_tag( "fb-icon-footer.png" ), "https://www.facebook.com/cannapages" ) %>
 			<%= link_to( image_tag( "twit-icon-footer.png" ), "https://twitter.com/Cannapages" ) %>
 		</div>
 	<table>
