--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -2513,3 +2513,27 @@ left: 631px;
 		font-style: bolder;
 	}
 }
+
+div.about-modal {
+	h4 {
+		margin-bottom: 10px;
+	}
+	h5 {
+		margin-bottom: 5px;
+	}
+	p {
+		margin-bottom: 5px;
+	}
+	ul {
+		list-style: initial;
+		position: relative;
+		left: 22px;
+	}
+	p h5 {
+		display: inline;
+		margin-right: 10px;
+	}
+	a {
+		color: blue;
+	}
+}
