--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,9 @@
   <%= render "modals/create_user_listing" %>
   <%= render "modals/create_user_ad" %>
   <%= render "modals/cadets_helper" %>
-  <%= render "modals/strain_wiki_placeholder" %>
+  <%= render "modals/about" %>
+  <%= render "modals/contact" %>
+  <%= render "modals/resources" %>
   <%= render "modals/cannasaver_placeholder" %>  
 	</div>
   </body>
