--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -22,14 +22,14 @@
 			<td>SOCIAL MEDIA</td>
 		</tr>
 		<tr>
-			<td>About Cannapages</td>
+			<td><%= link_to( "About Cannapages", "#about", "data-toggle" => :modal ) %>
 			<td><%= link_to "Listings Search Engine", dispensary_search_path %></td>
 			<td><%= link_to "ADILAS/CanaMerchant", "https://www.adilas.biz/" %></td>
-			<td>Business Resources</td>
+			<td><%= link_to( "Business Resources", "#resources", "data-toggle" => :modal ) %>
 			<td></td>
 		</tr>
 		<tr>
-			<td>Contact Us</td>
+			<td><%= link_to( "Contact Us", "#contact", "data-toggle" => :modal ) %>
 			<td><%= link_to "News", current_volume_path %></td>
 			<td><%= link_to "Cronic Magazine", "http://cronicmag.com/" %></td>
 			<td></td>
