Fixed adv and list with us links to us js

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -37,7 +37,7 @@
 		</tr>
 		<tr>
 			<td>
-						<%= link_to( "Advertise with Us", "#create_user_ad_modal", 
+						<%= link_to( "Advertise with Us", "#create_user_modal", class: "adv-with-us", 
 																		"data-toggle" => :modal ) %>
 			</td>
 			<td><%= link_to "Exclusive Editorials", critiques_path %></td>
@@ -47,7 +47,7 @@
 		</tr>
 		<tr>
 			<td>
-						<%= link_to( "Get A FREE Listing", "#create_user_ad_modal", 
+						<%= link_to( "Get A FREE Listing", "#create_user_modal", class: "list-with-us", 
 																		"data-toggle" => :modal ) %>
 			</td>
 			<td><%= backend_link %></td>
