--- a/app/views/shared/_newheader.html.erb
+++ b/app/views/shared/_newheader.html.erb
@@ -5,9 +5,9 @@
 			<ul class="top-links">
   			<li>
 						<% unless current_user? %>
-						<%= link_to( "Advertise with us", "#create_user_ad_modal", 
+						<%= link_to( "Advertise with us", "#create_user_modal", class: "adv-with-us",
 																		"data-toggle" => :modal ) %>
-						<%= link_to( "Submit Free Listing", "#create_user_listing_modal", 
+						<%= link_to( "Submit Free Listing", "#create_user_modal", class: "list-with-us",
 																		"data-toggle" => :modal ) %>
 						<% end %>
 						<%= raw login_or_backend %>
