--- a/app/views/modals/_create_user.html.erb
+++ b/app/views/modals/_create_user.html.erb
@@ -4,6 +4,8 @@
         <h3>Sign up!</h3>
     </div>
     <div class="modal-body">
+				<p id="signup-helper"></p>
+				<hr />
         <%= render partial: "users/form", locals: { user: User.new, con: :users, act: :create } %>
     </div>
 </div>
